--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games-prisedaka",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,7 @@
     "babel-node": "babel-node",
     "eslint": "eslint",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "flow-typed": "flow-typed",
     "prepublishOnly": "npm run build"
   },
   "author": "",
@@ -22,9 +23,11 @@
     "eslint-plugin-import": "*",
     "babel-eslint": "*",
     "eslint-plugin-jest": "*",
+    "flow-typed": "*",
     "eslint-plugin-flowtype": "*"
   },
   "dependencies": {
+    "hexlet-pairs": "^1.0.5",
     "make": "^0.8.1",
     "readline-sync": "*"
   },
